fix UCRF DBS3900 and add collapse\expand for panels

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -18,10 +18,6 @@
 .table > thead > tr > th.tablesorter-headerAsc {
     background-image: url(data:image/gif;base64,R0lGODlhFQAEAIAAACMtMP///yH5BAEAAAEALAAAAAAVAAQAAAINjI8Bya2wnINUMopZAQA7);
 }
-.panel-body > table {
-    margin-top: -15px;
-    margin-bottom: -15px;
-}
 .panel-header > .panel-heading {
     color: #fff;
     background-color: #548;
@@ -82,7 +78,43 @@
     display: none;
 }
 .table-holder {
-    padding: 15px 0 0 0;
+    padding: 0;
+}
+.panel-collapsible .panel-heading {
+    position: relative;
+}
+.panel-collapsible .panel-heading:after {
+    position: absolute;
+    top: 50%;
+    right: 15px;
+    width: 10px;
+    height: 10px;
+    margin-top: -5px;
+    content: "";
+    opacity: 0.8;
+    border-right: 3px solid #ebebeb;
+    border-bottom: 3px solid #ebebeb;
+    -webkit-transition: transform .5s ease-in-out;
+       -moz-transition: transform .5s ease-in-out;
+        -ms-transition: transform .5s ease-in-out;
+         -o-transition: transform .5s ease-in-out;
+            transition: transform .5s ease-in-out;
+    -webkit-transform: rotate(45deg);
+       -moz-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+         -o-transform: rotate(45deg);
+            transform: rotate(45deg);
+    -webkit-transform-style: preserve-3d;
+       -moz-transform-style: preserve-3d;
+        -ms-transform-style: preserve-3d;
+            transform-style: preserve-3d;
+}
+.panel-collapsible.panel-collapse .panel-heading:after {
+    -webkit-transform: rotate(-45deg);
+       -moz-transform: rotate(-45deg);
+        -ms-transform: rotate(-45deg);
+         -o-transform: rotate(-45deg);
+            transform: rotate(-45deg);
 }
 
 @media screen and (max-width: 479px) {
@@ -95,3 +127,4 @@
         padding: 4px;
     }
 }
+
